cabal-version:  2.4

name:           website
version:        0.1.0.0
synopsis:       Torsten Scholak's website
description:    Torsten Scholak's website
category:       website
homepage:       https://github.com/tscholak/website#readme
bug-reports:    https://github.com/tscholak/website
author:         Torsten Scholak
maintainer:     torsten.scholak@googlemail.com
copyright:      2021 Torsten Scholak
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Custom

source-repository head
  type: git
  location: https://github.com/tscholak/website

custom-setup
  setup-depends:
      base
    , Cabal
    , cabal-doctest >= 1 && <1.1

common shared-properties
  default-language: Haskell2010
  build-depends:
      aeson
    , attoparsec
    , base >=4.7 && <5
    , barbies
    , binary
    , bytestring
    , casing
    , containers
    , either
    , lens
    , lens-aeson
    , mtl
    , network-uri
    , network-uri-json
    , optparse-applicative
    , recursion-schemes
    , pandoc
    , pandoc-types
    , process
    , shake
    , slick
    , split
    , text
    , time
    , transformers
    , unordered-containers
    , vector
  ghc-options: -W -Wall -O2 -threaded -rtsopts -with-rtsopts=-N


executable website
  import: shared-properties
  main-is: Main.hs
  other-modules:
      Contact
    , Unrecurse
    , Flattening
  hs-source-dirs:
      app
    , site
    , site/posts

test-suite doctests
  import: shared-properties
  type: exitcode-stdio-1.0
  hs-source-dirs: doctests
  x-doctest-options: --no-magic
  main-is: Doctests.hs
  build-depends:
      doctest
    , QuickCheck
