cabal-version: 3.8
name: website
version: 0.2.0.0
synopsis: Torsten Scholak's website
description: Torsten Scholak's website
category: website
homepage: https://tscholak.github.io
bug-reports: https://github.com/tscholak/website
author: Torsten Scholak
maintainer: torsten.scholak@googlemail.com
copyright: 2025 Torsten Scholak
license: BSD-3-Clause
license-file: LICENSE
build-type: Custom

source-repository head
  type: git
  location: https://github.com/tscholak/website

custom-setup
  setup-depends:
    Cabal,
    base,
    cabal-doctest >=1 && <1.1,

common shared-properties
  default-language: Haskell2010
  build-depends:
    aeson,
    attoparsec,
    attoparsec-aeson,
    barbies,
    base >=4.7 && <5,
    binary,
    bytestring,
    casing,
    containers,
    directory,
    either,
    filepath,
    lens,
    lens-aeson,
    megaparsec,
    mtl,
    network-uri,
    optparse-applicative,
    pandoc,
    process,
    recursion-schemes,
    shake,
    slick,
    text,
    time,
    vector,
    yaml,

  ghc-options:
    -W
    -Wall
    -O2
    -threaded
    -rtsopts
    -with-rtsopts=-N

executable website
  import: shared-properties
  main-is: Main.hs
  other-modules:
    Contact
    Flattening
    OutsourcedAI
    Quantity
    Unrecurse

  hs-source-dirs:
    app
    lib
    site
    site/posts

test-suite doctests
  import: shared-properties
  type: exitcode-stdio-1.0
  hs-source-dirs: doctests
  x-doctest-options: --no-magic --verbose
  x-doctest-components: exe:website
  main-is: Doctests.hs
  build-depends:
    QuickCheck,
    doctest,
    template-haskell,

test-suite tests
  import: shared-properties
  type: exitcode-stdio-1.0
  hs-source-dirs:
    tests
    lib
    site/posts

  main-is: Spec.hs
  other-modules:
    Quantity
    QuantitySpec
    OutsourcedAI
    OutsourcedAISpec

  build-depends:
    HUnit,
    QuickCheck,
    hspec,
    hspec-discover,
